Update licence + repo url

--- a/hour_record.html
+++ b/hour_record.html
@@ -113,7 +113,7 @@ code span.wa { color: #5e5e5e; font-style: italic; }
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","preview"]}},"value":[{"type":"character","attributes":{},"value":["Hour Record Pacing Strategies"]},{"type":"character","attributes":{},"value":["A Comparison of Hour Record Pacing Strategies\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Julian During"]},{"type":"character","attributes":{},"value":["https://www.datannery.com/"]}]}]},{"type":"character","attributes":{},"value":["2022-11-18"]},{"type":"character","attributes":{},"value":["distill::distill_article"]},{"type":"character","attributes":{},"value":["targets::tar_read(png_time_all)"]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","preview","repository_url","creative_commons"]}},"value":[{"type":"character","attributes":{},"value":["Hour Record Pacing Strategies"]},{"type":"character","attributes":{},"value":["A Comparison of Hour Record Pacing Strategies\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Julian During"]},{"type":"character","attributes":{},"value":["https://www.datannery.com/"]}]}]},{"type":"character","attributes":{},"value":["2022-11-18"]},{"type":"character","attributes":{},"value":["distill::distill_article"]},{"type":"character","attributes":{},"value":["targets::tar_read(png_time_all)"]},{"type":"character","attributes":{},"value":["targets::tar_read(repo)"]},{"type":"character","attributes":{},"value":["CC BY"]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
@@ -2465,7 +2465,12 @@ you have to perform the following steps:</p>
 <!--radix_placeholder_site_after_body-->
 <!--/radix_placeholder_site_after_body-->
 <!--radix_placeholder_appendices-->
-<div class="appendix-bottom"></div>
+<div class="appendix-bottom">
+<h3 id="updates-and-corrections">Corrections</h3>
+<p>If you see mistakes or want to suggest changes, please <a href="targets::tar_read(repo)">create an issue</a> on the source repository.</p>
+<h3 id="reuse">Reuse</h3>
+<p>Text and figures are licensed under Creative Commons Attribution <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>. Source code is available at <a href="targets::tar_read(repo)">targets::tar_read(repo)</a>, unless otherwise noted. The figures that have been reused from other sources don&#39;t fall under this license and can be recognized by a note in their caption: &quot;Figure from ...&quot;.</p>
+</div>
 <!--/radix_placeholder_appendices-->
 <!--radix_placeholder_navigation_after_body-->
 <!--/radix_placeholder_navigation_after_body-->
